--- a/process/Utilityjobs/testAutomationJobs_0.2.properties
+++ b/process/Utilityjobs/testAutomationJobs_0.2.properties
@@ -7,12 +7,15 @@
     <additionalProperties xmi:id="_7dSaUvFKEeyZHfUSBRVMhg" key="created_date" value="2022-06-21T12:14:26.164+0100"/>
     <additionalProperties xmi:id="_7dSaU_FKEeyZHfUSBRVMhg" key="modified_product_fullname" value="Talend Data Management Platform"/>
     <additionalProperties xmi:id="_7dSaVPFKEeyZHfUSBRVMhg" key="modified_product_version" value="7.3.1.20220105_1637-patch"/>
-    <additionalProperties xmi:id="_7dSaVfFKEeyZHfUSBRVMhg" key="modified_date" value="2022-09-07T11:03:17.051+0100"/>
+    <additionalProperties xmi:id="_7dSaVfFKEeyZHfUSBRVMhg" key="modified_date" value="2022-09-14T14:45:58.674+0100"/>
     <additionalProperties xmi:id="_3soEwPFNEeytrb5Bt6WCtQ" key="import_product_fullname" value="Talend Data Management Platform"/>
     <additionalProperties xmi:id="_3soEwfFNEeytrb5Bt6WCtQ" key="import_product_version" value="7.3.1.20220105_1637-patch"/>
     <additionalProperties xmi:id="_3soEwvFNEeytrb5Bt6WCtQ" key="import_date" value="2022-06-21T12:35:29.420+0100"/>
+    <additionalProperties xmi:id="_LnvZYDQrEe2AC5UYnAyiTw" key="PUBLISH_AS_SNAPSHOT" value="true"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="_3tEJoPFNEeytrb5Bt6WCtQ" path="Utilityjobs"/>
+  <TalendProperties:ItemState xmi:id="_3tEJoPFNEeytrb5Bt6WCtQ" path="Utilityjobs" locked="true" lockDate="2022-09-14T14:45:35.673+0100">
+    <locker href="../../talend.project#_WMpG8PFNEeytrb5Bt6WCtQ"/>
+  </TalendProperties:ItemState>
   <TalendProperties:ProcessItem xmi:id="_7bylgvFKEeyZHfUSBRVMhg" property="_7bylgPFKEeyZHfUSBRVMhg" state="_3tEJoPFNEeytrb5Bt6WCtQ">
     <process href="testAutomationJobs_0.2.item#/"/>
   </TalendProperties:ProcessItem>
